# QComicViewer

./: CMakeLists.txt  QComicViewer.pro  QComicViewer_zh_CN.ts  README.md  aboutdialog.ui  archivereader.cpp  archivereader.h  bookpagesmodel.cpp  bookpagesmodel.h  folderarchivereader.cpp  folderarchivereader.h  icons.qrc  imagewidget.cpp  imagewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pagesnavigator.cpp  pagesnavigator.h  rararchivereader.cpp  rararchivereader.h  settings.cpp  settings.h  thumbnailview.cpp  ziparchivereader.cpp  ziparchivereader.h
qtrar/: qtrar_global.h
quazip/: quazip_global.h  zip.h
settingsdialog/: settingsdialog.cpp  viewsettingswidget.cpp  viewsettingswidget.h  viewsettingswidget.ui
widgets/: resizeawarelistview.cpp
